# thesis

./: .gitmodules  .nojekyll  README.md  _quarto.yml  index-preview.html  index.docx  index.embed.ipynb  index.html  index.out.ipynb  index.qmd  index.xml  pyproject.toml
_freeze/chapters/rat-model/execute-results/: ipynb.json
_freeze/chapters/rat-vml/execute-results/: html.json  ipynb.json
_freeze/chapters/tsl-optimzation/execute-results/: html.json
_freeze/index/execute-results/: html.json  tex.json  typ.json
_freeze/notebooks/data-screening/execute-results/: html.json  ipynb.json
_tex/: index.tex
chapters/: rat-model.qmd  rat-normalization.qmd  rat-vml.qmd  tsl-optimzation.embed.ipynb  tsl-optimzation.qmd
notebooks/: data-screening-preview.html  data-screening.embed.ipynb  data-screening.out.ipynb  old_comparison.ipynb  vml_figures.ipynb
site_libs/bootstrap/: bootstrap-4dc7a98584c33118436375e57f5a9a49.min.css
